-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.4.0-beta1
-
Windows 8.1 64 Bit
-
4846040e560dee7b3f38d667ec684f79e4c68758
When running Qt Creator from the installer, there are black rectangles on the welcome page (see attached screenshot) and I get
[1996] SOFT ASSERT: "settings.contains(key)" in file C:\work\build\qtsdk\qt-creator\src\libs\utils\theme\theme.cpp, line 287
in dbgview. Everything seems to work fine, if I use another settings path.
For Gerrit Dashboard: QTCREATORBUG-14051 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109402,3 | Theme: Improve handling of missing color values | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |