Theme: Improve handling of missing color values

Warn about which color value is missing, and continue reading the other
values, instead of just bailing out.

Task-number: QTCREATORBUG-14051
Change-Id: I028c0cccd091528b84dc8aacc23d62cb27805f3a
Reviewed-by: Thorben Kroeger <thorbenkroeger@gmail.com>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>